workloads/8_airflow-dev/test1-ingress-airflow-alb.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: airflow-dev
  name: ingress-airflow-dev
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:004625312447:certificate/7931dcd8-db0d-4595-88df-51f3d57819aa
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    #alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  tls:
  - hosts:
    - "*.topk8s.com"
    secretName: airflow-dev-secret
  defaultBackend:
    service:
      name: airflow-dev-webserver
      port:
        name: airflow-ui
  rules:
    - host: "*.topk8s.com"
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: airflow-dev-webserver
              port:
                number: 8080
